tests/tooling/fixtures/native/execution/positive/message_send_nonzero_global_identifier_fast_path.objc3
module MessageSendNonzeroGlobalIdentifierFastPathExecution;

let receiver = 7;

fn main() -> i32 {
  return [receiver ping];
}

