tests/tooling/fixtures/native/execution/negative/misplaced_qualifier_message_receiver_pure.objc3
module MisplacedQualifierMessageReceiverPure;

fn main() -> i32 {
  return [pure ping];
}